--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
     <div class="d-flex flex-column">
       <div class="profile">
         <img src="assets/img/profile-photo.png" alt="" class="img-fluid rounded-circle" />
-        <h1 class="text-light"><a href="index.html">&nbsp;&nbsp;&nbsp;Jan 
-          Kowalski&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a></h1>
+        <h1 class="text-light"><a href="index.html">Jan Kowalski</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
           <a href="#" class="linkedin"><i class="bx bx-mail-send"></i></a>
@@ -105,7 +104,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
-      <h1>Juliusz Marciniak</h1>
+      <h1>&nbsp;&nbsp;Jan Kowalski&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h1>
       <p>
         I'm a
         <span class="typed"
