Change contact email

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-  <title>Juliusz Marciniak</title>
+  <title>Jan Kowalski</title>
   <meta content="" name="description" />
   <meta content="" name="keywords" />
 
@@ -121,7 +121,7 @@
         <div class="section-title">
           <h2>About</h2>
           <p>
-            Hello, I'm <b>Juliusz Marciniak</b>.<br>
+            Hello, I'm <b>Jan Kowalski</b>.<br>
             With <b>Bachelor's degree in software engineering & 10+ years experience
               from software internship to lead engineer</b>, if you'd like,
             I'm ready to go up with your business.
@@ -881,7 +881,7 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>apollo21century@gmail.com</p>
+                <p>memsatuba@protonmail.com</p>
               </div>
 
               <div class="phone">
