--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
         <img src="assets/img/profile-photo.png" alt="" class="img-fluid rounded-circle" />
         <h1 class="text-light"><a href="index.html">Jan Kowalski</a></h1>
         <div class="social-links mt-3 text-center">
+          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
           <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
           <a href="#" class="linkedin"><i class="bx bx-mail-send"></i></a>
           <a href="#" class="google-plus"><i class="bx bx-mobile"></i></a>
           <a href="#" class="linkedin"><i class="bx bxl-github"></i></a>
           <!--</div>
         <div class="social-links mt-3 text-center">
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
           <a href="#" class="linkedin"><i class="bx bxl-telegram"></i></a>-->
         </div>
       </div>
@@ -885,6 +885,13 @@
               </div>
 
               <div class="phone">
+                <i class='bx bxl-linkedin'></i>
+                <h4>Linkedin:</h4>
+                <p>https://www.linkedin.com/in/jan-kowalski-a0b2b12a8/</p>
+                <p></p>
+              </div>
+
+              <div class="phone">
                 <i class='bx bxl-skype'></i>
                 <h4>Skype:</h4>
                 <p>live:apollo21century</p>
@@ -893,7 +900,7 @@
               <div class="phone">
                 <i class='bx bxl-github'></i>
                 <h4>Github:</h4>
-                <p>https://github.com/SoftDevVeteran</p>
+                <p>https://github.com/VeteranSoftDev</p>
               </div>
 
               <div class="phone">
