--- a/index.html
+++ b/index.html
@@ -28,14 +28,6 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet" />
-
-  <!-- =======================================================
-  * Template Name: iPortfolio
-  * Updated: Nov 17 2023 with Bootstrap v5.3.2
-  * Template URL: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -49,15 +41,10 @@
         <img src="assets/img/profile-photo.png" alt="" class="img-fluid rounded-circle" />
         <h1 class="text-light"><a href="index.html">Jan Kowalski</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <!-- <a href="https://www.linkedin.com/in/jan-kowalski-a0b2b12a8/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
           <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-          <a href="#" class="linkedin"><i class="bx bx-mail-send"></i></a>
-          <a href="#" class="google-plus"><i class="bx bx-mobile"></i></a>
-          <a href="#" class="linkedin"><i class="bx bxl-github"></i></a>
-          <!--</div>
-        <div class="social-links mt-3 text-center">
-          <a href="#" class="linkedin"><i class="bx bxl-telegram"></i></a>-->
-        </div>
+          <a href="#" class="linkedin"><i class="bx bxl-telegram"></i></i></a> -->
+          </div>
       </div>
 
       <nav id="navbar" class="nav-menu navbar">
@@ -155,21 +142,14 @@
                     <i class="bi bi-chevron-right"></i>
                     <strong>Jobs:</strong> <span>25+</span>
                   </li>
-                  <li>
-                    <i class="bi bi-chevron-right"></i>
-                    <strong>English:</strong> <span>Fluent</span>
-                  </li>
+                  
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
                   <li>
                     <i class="bi bi-chevron-right"></i>
-                    <strong>Age:</strong> <span>33</span>
-                  </li>
-                  <li>
-                    <i class="bi bi-chevron-right"></i>
-                    <strong>Marriage:</strong> <span>Single</span>
+                    <strong>English:</strong> <span>Fluent</span>
                   </li>
                   <li>
                     <i class="bi bi-chevron-right"></i>
@@ -736,7 +716,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/web-04.png" class="img-fluid" alt="" />
               <div class="portfolio-links">
@@ -745,7 +725,7 @@
                     class="bx bx-plus"></i></a>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
@@ -845,8 +825,8 @@
                   He always say that "the solution first, the action next". And I always call him "meticulous preparer".
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/colleague-05.png" class="testimonial-img" alt="" />
-                <h3>Fred Rowe</h3>
+                <img src="assets/img/testimonials/colleague-05.jpg" class="testimonial-img" alt="" />
+                <h3>Daivd Wilson</h3>
               </div>
             </div>
 
@@ -894,7 +874,7 @@
               <div class="phone">
                 <i class='bx bxl-skype'></i>
                 <h4>Skype:</h4>
-                <p>live:apollo21century</p>
+                <p>live:erosnewcentury</p>
               </div>
 
               <div class="phone">
