--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
         <div class="section-title">
           <h2>Resume</h2>
           <p>
-            Working for <b>ValueLogic</b> in position from summer-intern to <b>lead engineer
+            Working for <b>u2i</b> in position from summer-intern to <b>lead engineer
               for 8+ years</b>, I've got rich experience in both of software dev & management.
             I <b>participated 17 web, mobile, AI, cross-platform, smart contract and
               database administration jobs</b> there, especially,
@@ -472,7 +472,7 @@
 
         <div class="row">
           <div class="col-lg-6" data-aos="fade-right">
-            <h3 class="resume-title">in ValueLogic</h3>
+            <h3 class="resume-title">in u2i</h3>
             <div class="resume-item">
               <h4>Intern</h4>
               <h5>May 2013 - Sepember 2013</h5>
