--- a/index.html
+++ b/index.html
@@ -749,10 +749,10 @@
         </div>
 
         <div class="row curriculum">
-          <div class="col-lg-4" data-aos="fade-right">
+          <!-- <div class="col-lg-4" data-aos="fade-right">
             <img src="assets/img/graduation-myself.png" class="img-fluid" alt="" />
-          </div>
-          <div class="col-lg-8" data-aos="fade-left">
+          </div> -->
+          <div class="col-lg-12" data-aos="fade-left">
             <img src="assets/img/graduation-class.png" class="img-fluid" alt="" />
           </div>
         </div>
@@ -867,7 +867,6 @@
                 <i class='bx bxl-linkedin'></i>
                 <h4>Linkedin:</h4>
                 <p>https://www.linkedin.com/in/jan-kowalski-a0b2b12a8/</p>
-                <p></p>
               </div>
 
               <div class="phone">
@@ -885,14 +884,14 @@
               <div class="phone">
                 <i class='bx bx-mobile'></i>
                 <h4>Phone:</h4>
-                <p>+48 60 649 53 33</p>
+                <p>+48 60 649 5333</p>
               </div>
             </div>
           </div>
 
           <div class="col-lg-5 mt-5 mt-lg-0 d-flex align-items-stretch"
             style="display:flex; align-items: center; justify-content: center;">
-            <img src="assets/img/farewell.png" />
+            <img src="assets/img/contact.jpg" />
           </div>
         </div>
       </div>
