--- a/index.html
+++ b/index.html
@@ -452,101 +452,62 @@
         <div class="section-title">
           <h2>Resume</h2>
           <p>
-            Working for <b>u2i</b> in position from summer-intern to <b>lead engineer
-              for 8+ years</b>, I've got rich experience in both of software dev & management.
-            I <b>participated 17 web, mobile, AI, cross-platform, smart contract and
-              database administration jobs</b> there, especially,
-            for last 2 years I <b>led 5+ projects</b> successfully.<br>
-            Unfotunately, Having car accident in autumn 2021 I voluntarily resigned after 6 months.
-            Since being recovered I got interested in <b>position of freelancer</b> from
-            June 2022 and have <b>done 8+ jobs</b> with satisfication of each client so far.<br>
-            During that period, it brought me a creative idea to make <b>freelancer-support system</b>
-            (<b>AFF</b>: Assistant For Freelancer), and recently I've finally <b>built with 6
-              global colleagues</b>.<br>
-            Nowadays, we are globally co-working through it, that's why I keep solid
-            confidence in any software fields.
-            Our tagline is <b>"Together our 7, Nothing not to solve"</b><br>
-            Let me introduce my career in detail following:
+            <b>Experienced software developer</b> with 6+ years proficient in many platforms and tools, 
+            focused on delivering business value through quality software. 
+            I am equally <b>comfortable discussing requirements</b> in the language of the business as I am in heads-down coding sprints. 
+            I can take hard problems <b> from conception to production,</b> designing the big picture and sweating the details. 
+            <b>A lively debater</b> around the planning table and a passionate, agile collaborator, I understand that the team succeeds 
+            together. I love <b>creating distributed systems</b>, <b>prototyping with new technology</b>, and <b>automating the tedious.</b> 
+            I have an <b>intellectual curiosity</b> that fuels a fanatical devotion to <b>skills improvement and constant learning</b>. 
+            <b>Adept at collaborating with cross-functional teams</b> to implement security measures and optimize web 
+            application performance.<br>
+            <br>
+            <b>Let me introduce my career in detail following:</b>
           </p>
         </div>
 
         <div class="row">
           <div class="col-lg-6" data-aos="fade-right">
-            <h3 class="resume-title">in u2i</h3>
+            <h3 class="resume-title">Freelance</h3>
             <div class="resume-item">
-              <h4>Intern</h4>
-              <h5>May 2013 - Sepember 2013</h5>
-              <p><i>Database typist & analyser</i></p>
+              <h4></h4>
+              <h5>May 2022 - Present</h5>
+              <!-- <p><i>Database typist & analyser</i></p> -->
             </div>
 
+            <h3 class="resume-title">Senior Full Stack Developer</h3>
             <div class="resume-item">
-              <h4>Mobile developer</h4>
-              <h5>October 2013 - Febrary 2014</h5>
-              <p><i>Fontend developer II</i></p>
-              <h5>March 2014 - August 2015</h5>
-              <p><i>Junior developer</i></p>
-              <h5>September 2015 - Feb 2016</h5>
-              <p><i>Senior developer</i></p>
+              <h4>Sapien</h4>
+              <h5>January 2021 - May 2022</h5>
             </div>
 
+            <h3 class="resume-title">Full Stack Developer</h3>
             <div class="resume-item">
-              <h4>Web developer</h4>
-              <h5>March 2016 - December 2016</h5>
-              <p><i>AngularJS developer</i></p>
-              <h5>January 2017 - July 2017</h5>
-              <p><i>Backend developer</i></p>
-              <h5>August 2017 - Febrary 2018</h5>
-              <p><i>full-stack developer</i></p>
-              <h5>March 2018 - October 2018</h5>
-              <p><i>Senior developer</i></p>
+              <h4>InsureDAO</h4>
+              <h5>May 2020 - January 2021</h5>
             </div>
 
-            <div class="resume-item">
-              <h4>Kerenl engineer</h4>
-              <h5>November 2018 - Febrary 2019</h5>
-              <p><i>Solution researcher</i></p>
             </div>
 
+            <div class="col-lg-6" data-aos="fade-right">
+            <h3 class="resume-title">Senior React Native Developer</h3>
             <div class="resume-item">
-              <h4>Database administrator</h4>
-              <h5>March 2019 - May 2019</h5>
-              <p><i>ERP DB maintenance & management</i></p>
+              <h4>Q.ai</h4>
+              <h5>September 2019 - May 2020</h5>
             </div>
 
+            <h3 class="resume-title">Full Stack Developer</h3>
             <div class="resume-item">
-              <h4>Lead developer</h4>
-              <h5>June 2019 - August 2021</h5>
-              <p><i>Led 5+ AI, ATM driver, Blockchain, Desktop App dev</i></p>
+              <h4>Bella Football</h4>
+              <h5>April 2018 - September 2019</h5>
             </div>
-          </div>
 
-          <div class="col-lg-6" data-aos="fade-left" data-aos-delay="100">
-            <h3 class="resume-title">Freelancer</h3>
+            <h3 class="resume-title">Front-End Developer</h3>
             <div class="resume-item">
-              <h4>Software developer</h4>
-              <h5>June 2022 - Present</h5>
-              <ul>
-                <li><i>
-                    completed 3 fixing bug jobs
-                  </i></li>
-                <li><i>
-                    completed 1 from-scratch website dev
-                  </i></li>
-                <li><i>
-                    completed 2 matintenance services
-                  </i></li>
-                <li><i>
-                    Joined to 1 NFT staking dev
-                  </i></li>
-                <li><i>
-                    Completion of 1 integrated blockchain service
-                  </i></li>
-                <li><i>
-                    Led AFF service
-                  </i></li>
-              </ul>
+              <h4>Angry Nerds</h4>
+              <h5>September 2017 - April 2018</h5>
             </div>
-          </div>
+            </div>
         </div>
       </div>
     </section>
@@ -588,7 +549,7 @@
           <h2>Portfolio</h2>
           <p>
             I joined <b>25+</b> software projects with responsibilities <b>from developer to
-            leader for 10+ years</b>. <b>5 I led</b>, and completed <b>8 as a freelancer</b>.
+            leader for 6+ years</b>. <b>5 I led</b>, and completed <b>8 as a freelancer</b>.
             <br>Here It's revealed most valuable 10 products, following.
           </p>
         </div>
@@ -737,7 +698,7 @@
           <h2>Education</h2>
           <div class="university" data-aos="fade-down">
             <div>
-              <p>&nbsp;&nbsp;<strong>October 2009 - June 2013</strong></p>
+              <p>&nbsp;&nbsp;<strong>October 2013 - June 2017</strong></p>
               &nbsp;&nbsp;&nbsp;&nbsp;
               <b>Bachelor</b> of software engineering
               <br>&nbsp;&nbsp;&nbsp;&nbsp;
@@ -872,7 +833,7 @@
               <div class="phone">
                 <i class='bx bxl-skype'></i>
                 <h4>Skype:</h4>
-                <p>live:erosnewcentury</p>
+                <p>live:.cid.188856b520897864</p>
               </div>
 
               <div class="phone">
