--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
 
             <h3 class="resume-title">Full Stack Developer</h3>
             <div class="resume-item">
-              <h4>InsureDAO</h4>
+              <h4>Chaintope</h4>
               <h5>May 2020 - January 2021</h5>
             </div>
 
